# syara-x

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
capi/: Cargo.toml  build.rs  syara_x.h
capi/src/: lib.rs
capi/tests/: ffi_integration.rs
scripts/: create_test_fixtures.py  fetch_minilm.sh  install_onnxruntime_xdg.sh
syara/: Cargo.toml
syara/src/: cache.rs  compiled_rules.rs  compiler.rs  condition.rs  config.rs  error.rs  lib.rs  models.rs  parser.rs
syara/src/engine/: burn_evaluator.rs  chunker.rs  classifier.rs  cleaner.rs  llm_evaluator.rs  mod.rs  onnx_embedder.rs  phash_matcher.rs  semantic_matcher.rs  string_matcher.rs
syara/src/engine/burn_model/: attention.rs  deltanet.rs  ffn.rs  generate.rs  loader.rs  mamba.rs  mod.rs  nemotron.rs  qwen3.rs
syara/src/parser/: mod.rs  sections.rs
syara/tests/: classifier_integration.rs  integration.rs  phash_integration.rs  similarity_integration.rs
syara/tests/fixtures/tiny-nemotron/: config.json  model.safetensors
syara/tests/fixtures/tiny-qwen/: config.json  model.safetensors  tokenizer.json
tasks/: 04-12-2026-BUGFIX-PLAN.md  04-12-2026-BUGS.md  04-13-2026-local-llm-phase2-recovery.md  04-19-2026_BUGS.md  04-24-2026_BUGS.md  ARCHITECTURE.md  BUGS.md  CODEGUIDE.md  PUBLISH-GUIDE.md  TASK-REFINEMENT.md  YARA-X-PARITY-GAPS.md  burn-api-notes.md  lessons.md  todo.md
