[workspace]
members = ["syara", "capi"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/gatewaynode/syara-x"
keywords = ["yara", "security", "malware", "semantic", "pattern-matching"]

[workspace.dependencies]
syara-x = { path = "syara", version = "0.3.1" }
thiserror = "1.0.69"
regex = "1.10.6"
sha2 = { version = "0.10.8", features = ["std"] }
hex = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = "2.6.0"
reqwest = { version = "0.12.28", features = ["blocking", "json"], default-features = false }
serde_json = "1.0.148"
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png"] }
burn = { version = "0.20.1", default-features = false }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
safetensors = "0.7.0"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = "=0.17.2"
tempfile = "3.13.0"
