[package]
name = "syara-x-capi"
description = "C API for syara-x"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["external-ffi-bindings"]
readme = "../README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
syara-x = { workspace = true }

[build-dependencies]
cbindgen = "0.26.0"

[dev-dependencies]
tempfile = { workspace = true }
cbindgen = "0.26.0"
