[package]
name = "syara-x"
description = "Super YARA — extends YARA-compatible rules with semantic, classifier, and LLM-based matching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["text-processing", "algorithms"]
readme = "../README.md"

[dependencies]
thiserror = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
unicode-normalization = "0.1.24"
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
image = { workspace = true, optional = true }
burn = { workspace = true, optional = true, features = ["ndarray"] }
tokenizers = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }

[features]
default = []
sbert = ["dep:reqwest", "dep:serde_json"]
classifier = ["sbert"]
llm = ["dep:reqwest", "dep:serde_json"]
phash = ["dep:image"]
burn-llm = ["dep:burn", "dep:tokenizers", "dep:safetensors", "dep:serde_json"]
burn-llm-gpu = ["burn-llm", "burn/wgpu"]
all = ["sbert", "classifier", "llm", "phash"]

[dev-dependencies]
tempfile = { workspace = true }
